<resources>
    <string name="app_name">My Tasks</string>
    <string name="settings">Settings</string>
    <string name="analytics">Analytics</string>
    <string name="trash">Trash</string>
    <string name="archieve">Archieve</string>
    <string name="categories">Categories</string>
    <string name="pinned">Pinned</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="image">image</string>
    <string name="consistency">Consistency</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>